# BuilderBoard

./: .env.example  .gitignore  BACKEND_DUPLICATE_WORK_AUDIT.md  BACKEND_LOCK_CONTENTION_REPORT.md  BB-0002_INVESTIGATION.md  BUILDERBOARD_RUNTIME_LATENCY_ANALYSIS.md  BUILDER_ISOLATION_AUDIT.md  BUILDER_LIFECYCLE_SUMMARY.md  BUILDER_REQUEST_TIMELINE.md  BUILDER_WORKFLOW.md  BuilderBoard 1.0-Core Definition.md  BuilderBoard 1.0-Current Deficiencies Against Core Definition.md  GITHUB_READINESS.md  JULES.md  JULES_PROJECT_UNDERSTANDING.md  JULES_RUNTIME_ENVIRONMENT.md  LEDGER.md  LEDGER_NORMALIZATION_SUMMARY.md  LEDGER_REVISION_2_SUMMARY.md  LOCAL_DEVELOPMENT_RUNTIME.md  OPTIMIZATION_PRIORITY_REPORT.md  PROMPT_ARCHITECTURE_AUDIT.md  PROMPT_CONSTRUCTION_AUDIT.md  README.md  REPOSITORY_AUDIT.md  REPOSITORY_DISCOVERY_AUDIT.md  RUNTIME_ARCHITECTURE_AUDIT.md  RUNTIME_ENGINEERING_LEDGER.md  RUNTIME_LATENCY_REPORT.md  RUNTIME_OBSERVABILITY_AUDIT.md  RUNTIME_OLYMPICS_GAP_ANALYSIS.md  RUNTIME_UX_REPORT.md  SKILL_SPEC_v1.1.md  SKILL_SPEC_v1.md  TOOL_INVENTORY.md  TOOL_PIPELINE_REPORT.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml
src-tauri/runtime_traces/: OPENAI_PROTOCOL_COMPARISON.md  conversation_round_002.json  conversation_round_003.json  conversation_round_004.json  conversation_round_005.json  conversation_round_006.json  conversation_round_007.json  conversation_round_008.json  conversation_round_009.json  conversation_round_010.json  (+21 more)
(+214 files in other folders)
