[package]
name = "builderboard"
version = "0.1.0"
description = "BuilderBoard desktop shell"
authors = ["BuilderBoard"]
edition = "2021"

[lib]
name = "builderboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
