[package]
name = "builderboard"
version = "0.1.0"
description = "BuilderBoard desktop shell"
authors = ["BuilderBoard"]
edition = "2021"

[lib]
name = "builderboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "6"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
